--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -16,7 +16,7 @@
     </ion-item> -->
    
 
-    <ion-item lines="none" class="clickable" (click)="userLogout()">
+    <ion-item lines="none" class="clickable transparent-item" (click)="userLogout()">
       <ion-icon name="log-out-outline" class="menu-icons"></ion-icon>
       <ion-label class="menu-label">
         Logout
@@ -24,7 +24,7 @@
       <ion-icon name="chevron-forward-outline" slot="end" class="menu-icons"></ion-icon>
     </ion-item>
 
-    <ion-item lines="none" class="clickable" (click)="openhelpwebsite()">
+    <ion-item lines="none" class="clickable transparent-item" (click)="openhelpwebsite()">
       <ion-icon name="help-circle-outline" class="menu-icons"></ion-icon>
       <ion-label class="menu-label">
         Help
