--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,54 +1,49 @@
-.logo {
-    display: block;
-    max-width: 70%;
-    height: auto;
-    margin: 0 auto;
-    text-align: center;
-    border: none;
-  }
-  
-* {
-    font-family: 'Montserrat', sans-serif;
-}
-  
-.inner-container {
-    text-align: center;
-    padding: 16px; 
-    width: 85%;
-    border-radius: 12px;
-}
+.outer-container {
+    .auth-container {
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+        .welcome-container {
+            text-align: center;
+            .welcome-title {
+                font-size: x-large;
+                font-weight: bolder;
+                color: var(--primary-color);
+            }
+        }
+        
+        .form-container {
+            margin-top: 20px;
+            .input-field-container {
+                margin-top: 20px;
+                .input-field {
+                    background-color: white;
+                    margin-top: 10px;
+                    border-radius: 10px;
+                }
+            }
+        
+            .forgot-password {
+                margin-top: 20px;
+                margin-bottom: 20px;
+                display: flex;
+                justify-content: flex-end;
+            }
+        
+            .button-container {
+                margin-top: 20px;
+            }
+        }
 
-ion-card {
-    margin: 16px;
-    border-radius: 12px;
-}
+        .bottom-message-container {
+            text-align: center;
+        }
 
-ion-content {
-    background-color: white; 
-}
-
-#loginButton {
-    --background: #E63946;
-    border-radius: 12px;
-    ion-text {
-        --background: #E63946;
+        .register-link, .forgot-password {
+            color: var(--primary-color);
+            font-weight: bold;
+        }
     }
-}
-
-img[src="/assets/Asset 1.png"] {
-    width: 50%;
-    height: auto;
-    background: transparent;
-    border-radius: 0;
-    border: none; 
-    outline: none; 
-    outline-color: transparent; 
-}
-
-.loginButton {
-    --background: #E63946;
-    --color: white !important;
-    --border-style: solid;
-    --border-width: 2px;
-    --border-color: #E63946;
 }
