--- a/src/app/pages/register/register.page.scss
+++ b/src/app/pages/register/register.page.scss
@@ -1,73 +1,50 @@
-.outerContainer {
-  position: relative;
-  background-color: rgba(#F1FAEE,0.8);
+.outer-container {
+  .auth-container {
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+      .welcome-container {
+          text-align: center;
+          .welcome-title {
+              font-size: x-large;
+              font-weight: bolder;
+              color: var(--primary-color);
+          }
+      }
+      
+      .form-container {
+          margin-top: 20px;
+          .input-field-container {
+              margin-top: 20px;
+              .input-field {
+                  background-color: white;
+                  margin-top: 10px;
+                  border-radius: 10px;
+              }
+          }
+      
+          .forgot-password {
+              margin-top: 20px;
+              margin-bottom: 20px;
+              display: flex;
+              justify-content: flex-end;
+          }
+      
+          .button-container {
+              margin-top: 20px;
+          }
+      }
+
+      .bottom-message-container {
+          text-align: center;
+      }
+
+      .register-link, .forgot-password {
+          color: var(--primary-color);
+          font-weight: bold;
+      }
+  }
 }
 
-* {
-  font-family: 'Montserrat', sans-serif;
-}
-
-ion-card {
-  margin: 0px;
-  border-radius: 0px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba($color: #a9cfe0, $alpha: 0.8);
-  height: 100vh;
-  width: 100vw;
-  animation: fadeIn 5s;
-  overflow: auto;
-}
-
-
-ion-card-header {
-  color: #8490ba;
-  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
-}
-
-.signIn-buttons {
-  margin-bottom: 10px;
-}
-
-ion-button {
-  --background: #E63946;;
-  --margin: 20px;
-  --color: white !important;
-  --border-style: solid;
-  --border-width: 2px;
-  --border-color: #E63946;
-}
-
-.input-item{
-  --background: transparent;
-  margin-bottom: 5%;
-  border-radius: 10px;
-  color: black;
-  font-weight: bolder;
-}
-
-.inner-container {
-  box-shadow: 0px 2px 10px;
-  padding: 40px;
-  text-align: center;
-  border-radius: 12px;
-  width: 85%;
-  background-color: rgba($color: #050e12, $alpha: 0.1); // #95c4da
-}
-
-@keyframes fadeIn {
-  0% { opacity: 0.1; }
-  100% { opacity: 1; }
-}
-
-img[src="/assets/Asset 1.png"] {
-  width: 50%;
-  height: auto;
-  background: transparent;
-  border-radius: 0;
-  border: none; 
-  outline: none; 
-  outline-color: transparent; 
-}
