--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -157,7 +157,7 @@
       </ion-row>
       <ion-row>
         <ion-col size="12" size-md="6" size-lg="4" class="bottom-message-container">
-          <ion-text>Already have an account? <span class="register-link" routerLink="/register">Sign in</span></ion-text>
+          <ion-text>Already have an account? <span class="register-link" routerLink="/login">Sign in</span></ion-text>
         </ion-col>
       </ion-row>
     </ion-grid>
