--- a/src/app/pages/search/gymsearch/gymsearch.component.html
+++ b/src/app/pages/search/gymsearch/gymsearch.component.html
@@ -87,12 +87,12 @@
                       <ul>
                         <li *ngFor="let gymSession of friend">
                           <h1 class="workoutName" style="margin-bottom: 0;">{{ gymSession.workoutName }}</h1>
-                          <div style="display: flex; ">
+                          <div class="sessionContainer">
                             <div style="margin-right: 8px;">
                               <p class="dateAndTime">{{ formatDate(gymSession.date) }}</p>
                               <p class="dateAndTime" style="margin-top: -10px;">{{ gymSession.startTime }}-{{ formatTime(gymSession.endTime) }}</p>
                             </div>
-                            <ion-button style="--background: #A8DADC; --color: black; margin: auto; padding-right: 10px;" (click)="joinSession(gym.name, gym.place_id, gymSession.startTime, gymSession.date, gymSession.endTime, gymSession.workoutName)">Join <br>Session</ion-button>
+                            <ion-button style="--background: #A8DADC; --color: black; margin: auto; padding-right: 10px;" (click)="joinSession(gym.name, gym.place_id, gymSession.startTime, gymSession.date, gymSession.endTime, gymSession.workoutName)">Join <br>SweatSession</ion-button>
                           </div>
                         </li>
                       </ul>
