--- a/src/theme/colortheme.scss
+++ b/src/theme/colortheme.scss
@@ -10,4 +10,5 @@
     --secondary-color: #79919D; // Steel BLue
     --Tertiary-color: #BFDBEA; // Light Sky Blue
     --background-color: #F2F8FC; // Pale Baby Blue
+    --ripple-main-color: #f1a785;
 }
