--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,51 +1,9 @@
-<!-- <div class="outerContainer" style="background-color: #A8DADC;">
-  <ion-card style="background-color: #A8DADC;">
-    
-    <div class="inner-container" style="background-color: white;">
-      <img src="/assets/Asset 1.png" />
-
-      <div class="text-container">
-        <h5>Sign In</h5>
-        <ion-text>Please sign in to your account</ion-text>
-      </div>
-
-      <form [formGroup]="loginForm"
-      ngxsForm="login.loginForm"
-      (submit)="userLogin()">
-        <ion-item class="input-item">
-          <ion-label position="floating">
-            <ion-icon src="/assets/vector-icon.svg"></ion-icon>
-            Email
-          </ion-label>
-          <ion-input type="email" placeholder="Enter your email"  formControlName="email" required></ion-input>
-        </ion-item>
-
-        <ion-item class="input-item">
-          <ion-label position="floating"> 🔑Password</ion-label>
-          <ion-input type="password" placeholder="Enter your password"  formControlName="password" required></ion-input>
-        </ion-item>
-
-        <ion-button id="loginButton" expand="block" type="submit">
-            Login
-        </ion-button>
-      </form>
-
-      <ion-button class="loginButton" expand="block" (click)="continueWithGoogleAuth()">
-        <ion-icon name="logo-google" style="padding-right:5%;"></ion-icon>
-        <ion-text>Continue with Google</ion-text>
-      </ion-button>
-      
-      <h5 routerLink="/register">Don't have an account?</h5>
-      <h5>Forgot password?</h5>
-    </div>
-  </ion-card>
-</div> -->
 <ion-content [fullscreen]="true" class="outer-container">
   <div class="auth-container">
     <ion-grid>
       <ion-row >
         <ion-col size="12" size-md="6" size-lg="4" class="welcome-container">
-          <h1 class="welcome-title">Welcome back</h1>
+          <h1 class="welcome-title">Welcome back🤗</h1>
           <p class="welcome-subtitle">Login to your account</p>
         </ion-col>
       </ion-row>
@@ -74,7 +32,7 @@
 
             <div class="button-container">
               <ion-button id="loginButton" expand="block" type="submit">Login</ion-button>
-              <hr>or<hr>
+              <hr>OR<hr>
               <ion-button class="loginButton" expand="block" (click)="continueWithGoogleAuth()" class="white-button">
                 <ion-icon name="logo-google" style="padding-right:5%;"></ion-icon>
                 <ion-text>Continue with Google</ion-text>
