--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -10,7 +10,7 @@
             .welcome-title {
                 font-size: x-large;
                 font-weight: bolder;
-                color: var(--primary-color);
+                color: var(--secondary-color);
             }
         }
         
@@ -33,11 +33,12 @@
             }
         
             .button-container {
-                margin-top: 20px;
+                margin-top: 40px;
             }
         }
 
         .bottom-message-container {
+            margin-top: 20px;
             text-align: center;
         }
 
