--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -5,7 +5,7 @@
         <div class="slider-header">
           <h2>Today</h2>
         </div>
-        <swiper-container [slidesPerView]="2" [loop]="true"  centered-slides="true"  pagination="{hideOnClick: true}">
+        <swiper-container [slidesPerView]="2" [loop]="false"  centered-slides="true"  pagination="{hideOnClick: true}">
           <swiper-slide>
             <ion-card routerLink="/workout-scheduling">
               <ion-card-content>
