--- a/src/app/pages/search/usersearch/usersearch.component.html
+++ b/src/app/pages/search/usersearch/usersearch.component.html
@@ -9,7 +9,7 @@
   
   <div class="search-suggestions" *ngIf="searchTerms.showSuggestions">
     <ion-list class="transparent-list">
-      <ion-item lines="none" 
+      <ion-item lines="none" class="transparent-item"
         *ngFor="let suggestion of searchTerms.filteredSuggestions" 
         (click)="find(suggestion)">
         <ion-avatar slot="start">
@@ -20,7 +20,8 @@
           <p>{{"~ " +suggestion.bio}}</p>
         </ion-label>
       </ion-item>
-      <ion-item lines="none" *ngIf="showNoResults && this.searchTerms.filteredSuggestions!.length==0">
+      <ion-item lines="none" class="transparent-item"
+      *ngIf="showNoResults && this.searchTerms.filteredSuggestions!.length==0">
         <ion-text>No users found</ion-text>
       </ion-item>
     </ion-list>
