--- a/src/app/pages/search/usersearch/usersearch.component.scss
+++ b/src/app/pages/search/usersearch/usersearch.component.scss
@@ -6,14 +6,20 @@ ion-avatar {
 
 ion-item:hover {
     background-color: whitesmoke;
+    
 }
 
 ion-item{
     margin: 8px;
+    opacity: 1;
+    border-radius: 2px;
+    --padding-start: 0px;
+    --padding-end: 0px;
+    --padding-bottom: 0px;
+    --padding-top: 0px;
+    --padding-inline-end: 0px;
 }
 
 ion-card, ion-item {
-    --background: #A8DADC;
-    opacity: 1;
     border-radius: 2px;
 }
