--- a/src/app/pages/calories-calculator/calorie-target/calorie-target.component.html
+++ b/src/app/pages/calories-calculator/calorie-target/calorie-target.component.html
@@ -6,33 +6,33 @@
 
     <ion-card-content>
 
-      <ion-item>
+      <ion-item class="transparent-item">
                   <div class="icon-container">
                     <ion-icon name="calculator" class="calculator-icon"></ion-icon>
                   </div>
       </ion-item>
 
-      <ion-list>
-        <ion-item class="custom-label">
+      <ion-list class="transparent-list">
+        <ion-item class="custom-label transparent-item">
           <ion-label >Calculation</ion-label>
           <ion-label>Calories/day</ion-label>
         </ion-item>
       </ion-list>
 
-      <ion-list>
-        <ion-item lines="none">
+      <ion-list class="transparent-list">
+        <ion-item class="transparent-item" lines="none">
           <ion-label>BMI Value</ion-label>
           <ion-label [class]="getValueColor(BMIValue, 'BMI')">{{ BMIValue | number: '1.0-0' }}</ion-label>
         </ion-item>
-        <ion-item lines="none">
+        <ion-item class="transparent-item" lines="none">
           <ion-label>BMR Value</ion-label>
           <ion-label [class]="getValueColor(bmr, 'BMR')">{{ bmr | number: '1.0-0' }}</ion-label>
         </ion-item>
-        <ion-item lines="none">
+        <ion-item class="transparent-item" lines="none">
           <ion-label>TDEE Value</ion-label>
           <ion-label [class]="getValueColor(TDEEValue, 'TDEE')">{{ TDEEValue | number: '1.0-0' }}</ion-label>
         </ion-item>
-        <ion-item>
+        <ion-item class="transparent-item">
           <ion-label>Target Calories</ion-label>
           <ion-label [class]="getValueColor(targetCalories, 'target')">{{ targetCalories | number: '1.0-0' }}</ion-label>
         </ion-item>
