--- a/src/app/pages/exercise-explorer/view-exercise/view-exercise.component.html
+++ b/src/app/pages/exercise-explorer/view-exercise/view-exercise.component.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button class="default-button" (click)="dismissModal()">
-        <ion-icon name="arrow-back-outline"></ion-icon>
+        <ion-icon name="arrow-back-outline" class="larger-back-button"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title>View Exercise</ion-title>
