Dark Mode done with toggle

--- a/src/app/pages/fitnessgoals/goalcard/goalcard.component.scss
+++ b/src/app/pages/fitnessgoals/goalcard/goalcard.component.scss
@@ -19,7 +19,7 @@ ion-text {
 ion-item:not(.progress-label){
   --highlight-height: 0;
   --inner-border-width: 0;
-  --background: #A8DADC;
+  --background: #001b34;
   border-radius: 12px;
 }
 
