--- a/src/app/pages/goalview/goalview.page.html
+++ b/src/app/pages/goalview/goalview.page.html
@@ -12,7 +12,7 @@
 
 
     <ion-card>
-      <ion-item-divider style="background-color: #A8DADC; border-radius: 7px; padding: 5px">
+      <ion-item-divider style="border-radius: 7px; padding: 5px">
         <ion-card-title>Goal details</ion-card-title>
       </ion-item-divider>
       <ion-item>
@@ -33,7 +33,7 @@
       </ion-item>
 
       <form [formGroup]="TaskForm">
-        <ion-item-divider style="background-color: #A8DADC; border-radius: 7px">
+        <ion-item-divider style="border-radius: 7px">
           <ion-card-title >Tasks</ion-card-title>
           <ion-icon name = "add" size="large" (click)="addControl()" slot = "end" ></ion-icon>
         </ion-item-divider>
