--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -108,11 +108,11 @@
         <div class="slider-header">
           <h2>Discover</h2>
         </div>
-        <ion-card class="dashboard-card">
+<!--        <ion-card class="dashboard-card">-->
           <ion-grid>
             <ion-row>
               <ion-col size="6">
-                <ion-card class="discover-card" routerLink="/workout-scheduling">
+                <ion-card class="grid-cards" routerLink="/workout-scheduling">
                  <ion-card-content>
                   <ion-card-title>
                     <ion-icon name="calendar-outline"></ion-icon>
@@ -122,7 +122,7 @@
                 </ion-card>
               </ion-col>
               <ion-col size="6">
-                <ion-card class="discover-card" routerLink="/friends">
+                <ion-card class="grid-cards" routerLink="/friends">
                  <ion-card-content>
                   <ion-card-title>
                     <ion-icon name="people-circle-outline"></ion-icon>
@@ -134,7 +134,7 @@
             </ion-row>
             <ion-row>
               <ion-col size="6">
-                <ion-card class="discover-card" routerLink="/groups">
+                <ion-card class="grid-cards" routerLink="/groups">
                  <ion-card-content>
                   <ion-card-title>
                     <ion-icon name="people-outline"></ion-icon>
@@ -144,7 +144,7 @@
                 </ion-card>
               </ion-col>
               <ion-col size="6">
-                <ion-card class="discover-card" routerLink="/home/search">
+                <ion-card class="grid-cards" routerLink="/home/search">
                  <ion-card-content>
                   <ion-card-title>
                     <ion-icon name="body-outline"></ion-icon>
@@ -156,7 +156,7 @@
             </ion-row>
             <ion-row>
              <ion-col size="6">
-                <ion-card class="discover-card" routerLink="/exercise-explorer">
+                <ion-card class="grid-cards" routerLink="/exercise-explorer">
                  <ion-card-content>
                   <ion-card-title>
                     <ion-icon name="watch-outline"></ion-icon>
@@ -166,7 +166,7 @@
                 </ion-card>
               </ion-col>
                 <ion-col size="6">
-                    <ion-card class="discover-card" routerLink="/calories-calculator">
+                    <ion-card class="grid-cards" routerLink="/calories-calculator">
                         <ion-card-content>
                             <ion-card-title>
                                 <ion-icon name="calculator-outline"></ion-icon>
@@ -177,7 +177,7 @@
                 </ion-col>
             </ion-row>
           </ion-grid>
-        </ion-card>
+<!--        </ion-card>-->
       </div>
    </div>
   </ion-content>
