--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -16,14 +16,14 @@
     </ion-item> -->
    
 
-    <ion-item lines="none" class="clickable" (click)="userLogout()">
-      <ion-icon name="log-out-outline" class="menu-icons"></ion-icon>
-      <ion-label class="menu-label">
-        Logout
-      </ion-label>
-      <ion-icon name="chevron-forward-outline" slot="end" class="menu-icons"></ion-icon>
-    </ion-item>
 
+
+    <ion-item lines="none" class="clickable">
+      <ion-icon name="log-out-outline" class="menu-icons"></ion-icon>
+      <ion-toggle class="menu-label" (ionChange)="onToggletheme($event)">
+        Dark Mode
+      </ion-toggle>
+    </ion-item>
     <ion-item lines="none" class="clickable" (click)="openhelpwebsite()">
       <ion-icon name="help-circle-outline" class="menu-icons"></ion-icon>
       <ion-label class="menu-label">
@@ -32,6 +32,13 @@
       <ion-icon name="chevron-forward-outline" slot="end" class="menu-icons"></ion-icon>
     </ion-item>
   </ion-content>
+  <ion-item lines="none" class="clickable" (click)="userLogout()">
+    <ion-icon name="log-out-outline" class="menu-icons"></ion-icon>
+    <ion-label class="menu-label">
+      Logout
+    </ion-label>
+    <ion-icon name="chevron-forward-outline" slot="end" class="menu-icons"></ion-icon>
+  </ion-item>
 </ion-menu>
 
 
