--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -10,7 +10,11 @@
             .welcome-title {
                 font-size: x-large;
                 font-weight: bolder;
-                color: var(--secondary-color);
+                color: var(--main-color);
+            }
+
+            .welcome-subtitle {
+                color: var(--primary-color);
             }
         }
         
@@ -19,7 +23,7 @@
             .input-field-container {
                 margin-top: 20px;
                 .input-field {
-                    background-color: white;
+                    background-color: var(--input-field-color);
                     margin-top: 10px;
                     border-radius: 10px;
                 }
@@ -43,8 +47,28 @@
         }
 
         .register-link, .forgot-password {
-            color: var(--primary-color);
-            font-weight: bold;
+          color: var(--primary-color);
+          font-weight: bold;
+        }
+
+        .division-section {
+            display: flex;
+            align-items: center;
+            margin: 20px 0;
+        
+            .line {
+                flex: 1;
+                height: 1px;
+                background-color: #ccc;
+                margin: 0 10px;
+            }
+              
+            .or {
+                font-weight: bold;
+                font-size: 16px;
+                padding: 0 10px;
+                color: var(--primary-color)
+            }
         }
     }
 }
