--- a/src/theme/colortheme.scss
+++ b/src/theme/colortheme.scss
@@ -1,14 +1,12 @@
 // color theme
 :root {
-    --tangerine-orange: #F58653;
-    --slate-blue: #628BA0;
-    --steel-blue: #79919D;
-    --light-sky-blue: #BFDBEA;
-    --pale-baby-blue: #F2F8FC;
     --main-color: #F58653; //Tangerine Orange
-    --primay-color: #628BA0; // Slate Blue
+    --primary-color: #628BA0; // Slate Blue
     --secondary-color: #79919D; // Steel BLue
-    --Tertiary-color: #BFDBEA; // Light Sky Blue
+    --secondary-variant-color: #BFDBEA; // Light Sky Blue
     --background-color: #F2F8FC; // Pale Baby Blue
     --ripple-main-color: #f1a785;
+    --ripple-white-color: whitesmoke;
+    --input-field-color: white;
+    --button-secondary-color: white;
 }
