--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -3,7 +3,7 @@
     <ion-grid>
       <ion-row >
         <ion-col size="12" size-md="6" size-lg="4" class="welcome-container">
-          <h1 class="welcome-title">Welcome back🤗</h1>
+          <h1 class="welcome-title">Welcome Back🤗</h1>
           <p class="welcome-subtitle">Login to your account</p>
         </ion-col>
       </ion-row>
@@ -32,7 +32,11 @@
 
             <div class="button-container">
               <ion-button id="loginButton" expand="block" type="submit">Login</ion-button>
-              <hr>OR<hr>
+              <div class="division-section">
+                <div class="line"></div>
+                <div class="or">OR</div>
+                <div class="line"></div>
+              </div>
               <ion-button class="loginButton" expand="block" (click)="continueWithGoogleAuth()" class="white-button">
                 <ion-icon name="logo-google" style="padding-right:5%;"></ion-icon>
                 <ion-text>Continue with Google</ion-text>
