--- a/src/global.scss
+++ b/src/global.scss
@@ -103,7 +103,7 @@ ion-fab-button  {
     --background-activated: var(--ripple-main-color);
     --background-focused: var(--ripple-main-color);
     --color: white !important;
-    --ripple-color: deeppink;
+    --ripple-color: var(--ripple-main-color);
     opacity: 0.9;
 }
 
@@ -175,16 +175,16 @@ ion-button:not(.backbutton,.default-button, .white-button) {
 }
 
 .white-button {
-    --background: white;
+    --background: var(--button-secondary-color);
     --color: var(--primary-color);
     --border-radius: 10px;
-    --background-hover: whitesmoke;
-    --background-activated: whitesmoke;
-    --background-focused: whitesmoke;
+    --background-hover: var(--ripple-white-color);
+    --background-activated: var(--ripple-white-color);
+    --background-focused: var(--ripple-white-color);
 
     --border-style: solid;
     --border-width: 2px;
-    --border-color: white;
+    --border-color: var(--button-secondary-color);
 }
 
 ion-segment {
