--- a/src/app/pages/register/register.page.scss
+++ b/src/app/pages/register/register.page.scss
@@ -35,7 +35,7 @@
             margin-bottom: 20px;
             display: flex;
             align-items: center;
-            .custom-checkbox::part(checkbox-background-checked) {
+            .custom-checkbox::part(.checkbox-checked) {
                 background-color: var(--main-color);
                 border-color: var(--main-color);
             }
@@ -81,4 +81,3 @@
     }
   }
 }
-
