--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -20,7 +20,7 @@
 
     <ion-item lines="none" class="clickable">
       <ion-icon name="log-out-outline" class="menu-icons"></ion-icon>
-      <ion-toggle class="menu-label" (ionChange)="onToggletheme($event)">
+      <ion-toggle class="menu-label" (ionChange)="onToggletheme($event)" [(ngModel)]="darkmode">
         Dark Mode
       </ion-toggle>
     </ion-item>
