--- a/src/app/pages/fitnessgoal-view/fitnessgoal-view.page.html
+++ b/src/app/pages/fitnessgoal-view/fitnessgoal-view.page.html
@@ -22,25 +22,8 @@
 
     </ion-card>
 
-    <ion-card>
-          <ion-list>
+    <ion-card id="checklist">
 
-<!--            <ion-item *ngFor="let task of GOAL.Tasks!" lines="none">-->
-<!--                <ion-checkbox [(ngModel)]="task.done" slot="start"></ion-checkbox>-->
-<!--                <ion-label class="task-content">{{ task.content }}</ion-label>-->
-<!--            </ion-item>-->
-
-<!--              <div id="checklist">-->
-<!--                  <input checked="" value="1" name="r" type="checkbox" id="hello">-->
-<!--                  <label>Bread</label>-->
-<!--                  <input value="2" name="r" type="checkbox" id="hello">-->
-<!--                  <label for="02">Cheese</label>-->
-<!--                  <input value="3" name="r" type="checkbox" id="hello">-->
-<!--                  <label for="03">Coffee</label>-->
-<!--                  <input value="3" name="r" type="checkbox" id="hello">-->
-<!--                  <label>Coffee</label>-->
-<!--              </div>-->
-              <div id="checklist">
                   <ng-container *ngFor="let task of GOAL.Tasks">
 
                           <input [(ngModel)]="task.done" name="r" type="checkbox" id="task_{{ task.id }}">
@@ -48,10 +31,9 @@
                           <label [for]="'task_' + task.id" class="checkbox-label">{{ task.content }}</label>
 
                   </ng-container>
-              </div>
 
-          </ion-list>
 
+    </ion-card>
         <div class="ion-padding">
             <ion-grid>
                 <ion-row>
@@ -64,5 +46,5 @@
                 </ion-row>
             </ion-grid>
            </div>
-    </ion-card>
+
   </ion-content>
