--- a/src/app/pages/view-personalbests/add-personal-best/add-personal-best.component.html
+++ b/src/app/pages/view-personalbests/add-personal-best/add-personal-best.component.html
@@ -8,15 +8,18 @@
 </ion-header>
 
 <ion-content>
-  <ion-card style="background-color: #A8DADC; padding: 5px; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center;">
+  <ion-card style="padding: 5px; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center;">
     <ion-card-title style="padding-top: 10px;">Add Personal best</ion-card-title>
       <ion-card-content>
           <ion-img src="../../../assets/goalsBanner.jpg"></ion-img>
       </ion-card-content>
+
+
   </ion-card>
 
+  <ion-card>
   <form [formGroup]="PersonalBestForm" (ngSubmit)="onSubmit()" class="ion-padding">
-    <ion-item>
+    <ion-item lines="none">
       <ion-label>Select Exercise</ion-label>
       <ion-select formControlName="exercise" placeholder="EXERCISE">
         <ion-select-option value="Bench Press">Bench Press</ion-select-option>
@@ -28,22 +31,22 @@
       </ion-select>
     </ion-item>
   
-    <ion-item>
+    <ion-item lines="none">
       <ion-label position="stacked">Weight</ion-label>
       <ion-input placeholder="Enter Weight (kg)" formControlName="weight" type="number"></ion-input>
     </ion-item>
   
-    <ion-item>
+    <ion-item lines="none">
         <ion-label position="stacked">Repetitions</ion-label>
         <ion-input placeholder="Enter Reps" formControlName="reps" type="number"></ion-input>
     </ion-item>
   
-    <ion-item>
+    <ion-item lines="none">
         <ion-label position="stacked">Date</ion-label>
         <ion-input type="date" displayFormat="YYYY/MM/DD" formControlName="date"></ion-input>
     </ion-item>
 
-    <ion-item>
+    <ion-item lines="none">
       <ion-label position="stacked">Location</ion-label>
       <div class="wrapper">
         <div class="input">
@@ -55,10 +58,12 @@
       </div>
     </ion-item>
     
-    <ion-item>
+    <ion-item lines="none">
       <ion-label position="stacked">Notes</ion-label>
       <ion-input placeholder="Enter Notes" formControlName="notes" type="txt"></ion-input>
     </ion-item>
+
     <ion-button type="submit" class="submit-button" expand="block" [disabled]="!isValid(PersonalBestForm.value)"><ion-icon slot="start" name="checkmark"></ion-icon>Submit</ion-button>
   </form>
+  </ion-card>
 </ion-content>
