--- a/src/global.scss
+++ b/src/global.scss
@@ -206,6 +206,16 @@ swiper-container::part(bullet) {
     background-color: #A8DADC;
 }
 
+/* Hide scrollbars for Webkit browsers (e.g., Chrome, Safari) */
+::-webkit-scrollbar {
+    display: none;
+}
+
+/* For Firefox */
+html {
+    scrollbar-width: none;
+}
+
 // color theme
 // 0% {color: #1D3557;}
 // 25% {color: #457B9D;}
