--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -160,14 +160,14 @@
     --ion-text-color: #4185ff;
     --ion-text-color-rgb: 255,255,255;
 
-    --ion-color-step-50: #0d0d0d;
-    --ion-color-step-100: #1a1a1a;
-    --ion-color-step-150: #262626;
-    --ion-color-step-200: #333333;
-    --ion-color-step-250: #404040;
-    --ion-color-step-300: #4d4d4d;
-    --ion-color-step-350: #595959;
-    --ion-color-step-400: #666666;
+    --ion-color-step-50: #001b34;
+    --ion-color-step-100: #172a43;
+    --ion-color-step-150: #2b3b52;
+    --ion-color-step-200: #3f4c62;
+    --ion-color-step-250: #525e72;
+    --ion-color-step-300: #667082;
+    --ion-color-step-350: #7b8393;
+    --ion-color-step-400: #9097a4;
     --ion-color-step-450: #737373;
     --ion-color-step-500: #808080;
     --ion-color-step-550: #8c8c8c;
